app inside landing page

--- a/landing/src/app/(layout)/(mdx)/how-to-install/page.mdx
+++ b/landing/src/app/(layout)/(mdx)/how-to-install/page.mdx
@@ -1,6 +1,6 @@
 # How to install
 
-import { release } from "../../../config";
+import { release } from "../../../../config";
 
 1. <a href={release}>Go to this page </a>
 2. Download the latest version for your platform
