multi person chat

--- a/landing/src/app/(layout)/(mdx)/personalities/page.mdx
+++ b/landing/src/app/(layout)/(mdx)/personalities/page.mdx
@@ -1,11 +1,11 @@
-# Personalities
+# Persons
 
-You can use personalities to make ChatGPT pretend to be someone else or in some different mode.
-It comes with a few personalities built in, but you can also set your own and modify existing ones.
+You can use persons to make ChatGPT pretend to be someone else or in some different mode.
+It comes with a few persons built in, but you can also set your own and modify existing ones.
 
-## Built-in personalities
+## Built-in persons
 
-Built-in personalities and their prompts.
+Built-in persons and their prompts.
 
 ### Normal
 
